deployment2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    env: sandbox2
spec:
  replicas: 1
  selector:
    matchLabels:
      env: sandbox
  template:
    metadata:
      labels:
        env: sandbox2
    spec:
      containers:
      - name: nginx
        image: krishnakant888/nginx
        ports:
        - containerPort: 80
