service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    env: sandbox
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    env: sandbox
